--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^6.0.2",
     "lodash": "^4.17.11",
     "lodash.isequal": "^4.5.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-compound-timer": "^1.0.13",
     "react-dom": "^16.8.6",
